Bug 838421 - After an instance of BluetoothAdapter is destroyed, no events can be received by other instances, r=echou